--- a/build.xml
+++ b/build.xml
@@ -65,7 +65,8 @@
  </target>
 
  <target name="phploc" description="Measure project size using PHPLOC">
-  <exec executable="phploc">
+  <exec executable="php">
+   <arg value="phploc" />
    <arg value="--log-csv" />
    <arg value="${basedir}/build/logs/phploc.csv" />
    <arg path="${basedir}/PHPUnit" />
