--- a/build.xml
+++ b/build.xml
@@ -86,7 +86,8 @@
 
  <target name="phpmd"
          description="Perform project mess detection using PHPMD">
-  <exec executable="phpmd">
+  <exec executable="php">
+   <arg path="phpmd" />
    <arg path="${basedir}/PHPUnit" />
    <arg value="text" />
    <arg value="${basedir}/build/phpmd.xml" />
@@ -95,7 +96,8 @@
 
  <target name="phpmd-ci"
          description="Perform project mess detection using PHPMD">
-  <exec executable="phpmd">
+   <exec executable="php">
+   <arg path="phpmd" />
    <arg path="${basedir}/PHPUnit" />
    <arg value="xml" />
    <arg value="${basedir}/build/phpmd.xml" />
@@ -106,7 +108,8 @@
 
  <target name="phpcs"
          description="Find coding standard violations using PHP_CodeSniffer">
-  <exec executable="phpcs">
+  <exec executable="php">
+   <arg value="phpcs" />
    <arg value="--standard=${basedir}/build/PHPCS" />
    <arg value="--extensions=php" />
    <arg value="--ignore=Autoload.php" />
@@ -116,7 +119,8 @@
 
  <target name="phpcs-ci"
          description="Find coding standard violations using PHP_CodeSniffer">
-  <exec executable="phpcs" output="/dev/null">
+  <exec executable="php" output="/dev/null">
+   <arg value="phpcs" />
    <arg value="--report=checkstyle" />
    <arg value="--report-file=${basedir}/build/logs/checkstyle.xml" />
    <arg value="--standard=${basedir}/build/PHPCS" />
@@ -127,7 +131,8 @@
  </target>
 
  <target name="phpcpd" description="Find duplicate code using PHPCPD">
-  <exec executable="phpcpd">
+  <exec executable="php">
+   <arg value="phpcpd" />
    <arg value="--log-pmd" />
    <arg value="${basedir}/build/logs/pmd-cpd.xml" />
    <arg path="${basedir}/PHPUnit" />
