adicionado apenas o teste teste2

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -25,7 +25,7 @@
 
   <testsuites>
     <testsuite name="PHPUnit">
-      <directory suffix="Test.php">Tests</directory>
+      <directory suffix="Test.php">Tests/Selenium2TestCase</directory>
     </testsuite>
   </testsuites>
 
