skip dir coverage

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -5,33 +5,36 @@
          backupGlobals="false"
          colors="true">
 
-  <php>
-    <const name="PHPUNIT_TESTSUITE" value="true"/>
-    <const name="PHPUNIT_TESTSUITE_EXTENSION_SELENIUM_HOST" value="127.0.0.1"/>
-    <const name="PHPUNIT_TESTSUITE_EXTENSION_SELENIUM_PORT" value="4444"/>
-    <const name="PHPUNIT_TESTSUITE_EXTENSION_SELENIUM_BROWSER" value="*firefox"/>
-    <const name="PHPUNIT_TESTSUITE_EXTENSION_SELENIUM2_BROWSER" value="firefox"/>
-    <const name="PHPUNIT_TESTSUITE_EXTENSION_SELENIUM_TESTS_URL" value="http://localhost/roquebrasilia-phpunit-selenium/selenium-1-tests/"/>
-    <const name="PHPUNIT_TESTSUITE_EXTENSION_SELENIUM_PATH" value="/tmp"/>
-  </php>
+    <php>
+        <const name="PHPUNIT_TESTSUITE" value="true"/>
+        <const name="PHPUNIT_TESTSUITE_EXTENSION_SELENIUM_HOST" value="127.0.0.1"/>
+        <const name="PHPUNIT_TESTSUITE_EXTENSION_SELENIUM_PORT" value="4444"/>
+        <const name="PHPUNIT_TESTSUITE_EXTENSION_SELENIUM_BROWSER" value="*firefox"/>
+        <const name="PHPUNIT_TESTSUITE_EXTENSION_SELENIUM2_BROWSER" value="firefox"/>
+        <const name="PHPUNIT_TESTSUITE_EXTENSION_SELENIUM_TESTS_URL" value="http://localhost/roquebrasilia-phpunit-selenium/selenium-1-tests/"/>
+        <const name="PHPUNIT_TESTSUITE_EXTENSION_SELENIUM_PATH" value="/tmp"/>
+    </php>
 
-  <!-- Logs are not accessible in the current CI environment
-  <logging>
-    <log type="coverage-html" target="build/coverage" title="PHPUnit"
-         charset="UTF-8" yui="true" highlight="true"
-         lowUpperBound="35" highLowerBound="70"/>
-  </logging>
-  -->
+    <!-- Logs are not accessible in the current CI environment
+    <logging>
+      <log type="coverage-html" target="build/coverage" title="PHPUnit"
+           charset="UTF-8" yui="true" highlight="true"
+           lowUpperBound="35" highLowerBound="70"/>
+    </logging>
+    -->
 
-  <testsuites>
-    <testsuite name="PHPUnit">
-      <directory suffix="Test.php">Tests/Selenium2TestCase</directory>
-    </testsuite>
-  </testsuites>
+    <testsuites>
+        <testsuite name="PHPUnit">
+            <directory suffix="Test.php">Tests/Selenium2TestCase</directory>
+        </testsuite>
+    </testsuites>
 
-  <filter>
-    <whitelist addUncoveredFilesFromWhitelist="true">
-      <directory suffix=".php">PHPUnit</directory>
-    </whitelist>
-  </filter>
+    <filter>
+        <whitelist addUncoveredFilesFromWhitelist="true">
+            <directory suffix=".php">PHPUnit</directory>
+            <exclude>
+                <directory suffix=".php">Tests/Selenium2TestCase/Coverage</directory>
+            </exclude>
+        </whitelist>
+    </filter>
 </phpunit>
