--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -34,4 +34,18 @@
             <directory suffix=".php">PHPUnit</directory>
         </whitelist>
     </filter>
+    
+    <logging>
+
+        <log type="coverage-html" target="build/coverage/report" lowUpperBound="35"   highLowerBound="70"/>
+        <log type="coverage-clover" target="build/coverage/coverage.xml"/>
+        <log type="coverage-php" target="build/coverage/coverage.serialized"/>
+        <log type="coverage-text" target="php://stdout" showUncoveredFiles="false"/>
+
+        <log type="json" target="build/php-selenium-logs/logfile.json"/>
+        <log type="tap" target="build/php-selenium-logs/logfile.tap"/>
+        <log type="junit" target="build/php-selenium-logs/logfile.xml" logIncompleteSkipped="false"/>
+        <log type="testdox-html" target="build/php-selenium-logs/testdox.html"/>
+        <log type="testdox-text" target="build/php-selenium-logs/testdox.txt"/>
+    </logging>
 </phpunit>
