--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -31,6 +31,13 @@
     <testsuites>
         <testsuite name="PHPUnit">
             <file>Test/Selenium2TestCaseTest.php</file>
+            <file>Test/Selenium2TestCase/CustomDesiredCapabilitiesTest.php</file>
+            <file>Test/Selenium2TestCase/FailuresTest.php</file>
+            <file>Test/Selenium2TestCase/LogTest.php</file>
+            <file>Test/Selenium2TestCase/MobileFeaturesTest.php</file>
+            <file>Test/Selenium2TestCase/MultipleBrowsersMethodTest.php</file>
+            <file>Test/Selenium2TestCase/MultipleBrowsersPropertyTest.php</file>
+            <file>Test/Selenium2TestCase/RegressionsTest.php</file>
         </testsuite>
     </testsuites>
 
