--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -30,14 +30,15 @@
     
     <testsuites>
         <testsuite name="PHPUnit">
-<!--            <file>Test/Selenium2TestCaseTest.php</file>-->
+             <directory suffix="Test.php">Tests/Selenium2TestCase</directory>
+<!--            <file>Test/Selenium2TestCaseTest.php</file>
             <file>Test/Selenium2TestCase/CustomDesiredCapabilitiesTest.php</file>
-<!--            <file>Test/Selenium2TestCase/FailuresTest.php</file>
+           <file>Test/Selenium2TestCase/FailuresTest.php</file>
             <file>Test/Selenium2TestCase/LogTest.php</file>
             <file>Test/Selenium2TestCase/MobileFeaturesTest.php</file>
             <file>Test/Selenium2TestCase/MultipleBrowsersMethodTest.php</file>
             <file>Test/Selenium2TestCase/MultipleBrowsersPropertyTest.php</file>
-            <file>Test/Selenium2TestCase/RegressionsTest.php</file>-->
+             <file>Test/Selenium2TestCase/RegressionsTest.php</file>-->
         </testsuite>
     </testsuites>
 
