--- a/composer.json
+++ b/composer.json
@@ -38,11 +38,12 @@
         "ext-dom": "*",
         "mayflower/php-codebrowser": "~1.1",
         "phpmd/phpmd": "@stable",
-        "pdepend/pdepend" : "2.1.0",
+        "pdepend/pdepend": "2.1.0",
         "phploc/phploc": "*",
         "squizlabs/php_codesniffer": "2.*",
-         "sebastian/phpcpd": "*"
-        
+        "sebastian/phpcpd": "*",
+        "phpunit/phpunit-selenium": ">=1.2"
+
     },
     "autoload": {
         "classmap": [
