--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
         "phploc/phploc": "*",
         "squizlabs/php_codesniffer": "2.*",
         "sebastian/phpcpd": "*",
-        "phpunit/phpunit-selenium": ">=1.2"
+        "phpunit/phpunit-selenium": "1.4.2"
 
     },
     "autoload": {
