--- a/composer.json
+++ b/composer.json
@@ -42,11 +42,7 @@
         "phpunit/phpunit-selenium": "1.4.2"
 
     },
-    "autoload": {
-        "classmap": [
-            "PHPUnit/"
-        ]
-    },
+    "autoload": {},
     "include-path": [
         ""
     ]
