--- a/build.xml
+++ b/build.xml
@@ -27,12 +27,9 @@
         <delete dir="${basedir}/build/logs"/>
         <delete dir="${basedir}/build/pdepend"/>
     </target>
-
-    <!-- <target name="prepare" depends="clean,phpab"
-    description="Prepare for build">
-    -->
-    <target name="prepare" depends="clean"
-                 description="Prepare for build">
+    
+    <target name="prepare" depends="clean,phpab"
+        description="Prepare for build">
         <mkdir dir="${basedir}/build/api"/>
         <mkdir dir="${basedir}/build/code-browser"/>
         <mkdir dir="${basedir}/build/coverage"/>
