--- a/composer.json
+++ b/composer.json
@@ -38,9 +38,7 @@
         "pdepend/pdepend": "2.1.0",
         "phploc/phploc": "*",
         "squizlabs/php_codesniffer": "2.*",
-        "sebastian/phpcpd": "*",
-        "phpunit/phpunit-selenium": "1.4.2"
-
+        "sebastian/phpcpd": "*"
     },
     "autoload": {
     },
