--- a/composer.json
+++ b/composer.json
@@ -40,13 +40,11 @@
         "squizlabs/php_codesniffer": "2.*",
         "sebastian/phpcpd": "*",
         "phpunit/phpunit-selenium": "1.4.2"
-
     },
     "autoload": {
-        "classmap": [
-        ]
+         "files": ["Tests/Selenium2TestCase/BaseTestCase.php"]
     },
     "include-path": [
-        "Tests/Selenium2TestCase/BaseTestCase/"
+        ""
     ]
 }
