adicionado novamente "files": ["Tests/Selenium2TestCase/BaseTestCase.php"]

--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
         "phpunit/phpunit-selenium": "1.4.2"
     },
     "autoload": {
-         
+         "files": ["Tests/Selenium2TestCase/BaseTestCase.php"]
     },
     "include-path": [
         ""
