adicionado a execucao do phpab

--- a/build.xml
+++ b/build.xml
@@ -28,10 +28,10 @@
         <delete dir="${basedir}/build/pdepend"/>
     </target>
     
-    <!--<target name="prepare" depends="clean,phpab"
-        description="Prepare for build">-->
-        <target name="prepare" depends="clean"
+    <target name="prepare" depends="clean,phpab"
         description="Prepare for build">
+      <!--  <target name="prepare" depends="clean"
+        description="Prepare for build">-->
         <mkdir dir="${basedir}/build/api"/>
         <mkdir dir="${basedir}/build/code-browser"/>
         <mkdir dir="${basedir}/build/coverage"/>
