--- a/composer.json
+++ b/composer.json
@@ -40,9 +40,12 @@
         "squizlabs/php_codesniffer": "2.*",
         "sebastian/phpcpd": "*",
         "phpunit/phpunit-selenium": "1.4.2"
+
     },
     "autoload": {
-         "files": ["Tests/Selenium2TestCase/BaseTestCase.php"]
+        "classmap": [
+            "PHPUnit/"
+        ]
     },
     "include-path": [
         ""
