--- a/build.xml
+++ b/build.xml
@@ -48,7 +48,7 @@
             <arg path="PHPUnit/Extensions/SeleniumCommon/Autoload.php.in" />
             <arg value="--indent" />
             <arg value="            " />
-            <arg path="PHPUnit/"/>
+            <arg path="vendor/phpunit/phpunit-selenium/PHPUnit/"/>
         </exec>
     </target>
 
