ficando igual a build 59

--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,9 @@
         "phpunit/phpunit-selenium": "1.4.2"
     },
     "autoload": {
-         "files": ["Tests/Selenium2TestCase/BaseTestCase.php"]
+        "classmap": [
+            "PHPUnit/"
+        ]
     },
     "include-path": [
         ""
