--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
     },
     "autoload": {
         "classmap": [
-            "PHPUnit/"
+            "vendor/phpunit/phpunit-selenium/PHPUnit/"
         ]
     },
     "include-path": [
